--- a/dev/assets/stylesheets/less/style.less
+++ b/dev/assets/stylesheets/less/style.less
@@ -1,2 +1,13 @@
+// style
+
 // import Bootstrap
-@import '../../components/bootstrap/less/bootstrap.less';
+@import '../../components/bootstrap/less/bootstrap';
+
+// variables
+@import 'variables';
+
+// default structure
+@import 'default';
+
+// page structure
+@import 'navbar';
