--- a/dev/assets/stylesheets/less/style.less
+++ b/dev/assets/stylesheets/less/style.less
@@ -6,8 +6,15 @@
 // variables
 @import 'variables';
 
+// mixins
+@import 'mixins/margin-top-bottom';
+@import 'mixins/padding-header';
+
 // default structure
 @import 'default';
 
 // page structure
 @import 'navbar';
+@import 'header';
+@import 'about';
+@import 'services';
