Pricing e Contact inseridos nos padroes Bootstrap

--- a/dev/assets/stylesheets/less/team.less
+++ b/dev/assets/stylesheets/less/team.less
@@ -15,6 +15,10 @@
         &:extend(.text-center);
       }
 
+      figure img {
+        border-radius: 50%;
+      }
+
       h4 {
         margin-bottom: 0;
       }
