--- a/dev/assets/stylesheets/style.css
+++ b/dev/assets/stylesheets/style.css
@@ -1304,7 +1304,8 @@ mark,
 #portfolio .box-content li,
 #team .box-content .item figure,
 #team .box-content .item h4,
-#team .box-content .item p {
+#team .box-content .item p,
+#pricing .box-content .item {
   text-align: center;
 }
 .text-justify,
@@ -2974,7 +2975,9 @@ select[multiple].form-group-lg .form-control {
   }
 }
 .btn,
-.ms-header a {
+.ms-header a,
+#pricing .box-content .item a,
+#contact .box-content button {
   display: inline-block;
   margin-bottom: 0;
   font-weight: normal;
@@ -3028,7 +3031,8 @@ fieldset[disabled] .btn {
   box-shadow: none;
 }
 .btn-default,
-.ms-header a {
+.ms-header a,
+#contact .box-content button {
   color: #333333;
   background-color: #ffffff;
   border-color: #cccccc;
@@ -3118,7 +3122,8 @@ fieldset[disabled] .btn-primary.active {
   color: #337ab7;
   background-color: #ffffff;
 }
-.btn-success {
+.btn-success,
+#pricing .box-content .item a {
   color: #ffffff;
   background-color: #5cb85c;
   border-color: #4cae4c;
@@ -3340,7 +3345,9 @@ fieldset[disabled] .btn-link:focus {
 }
 .btn-sm,
 .btn-group-sm > .btn,
-.ms-header a {
+.ms-header a,
+#pricing .box-content .item a,
+#contact .box-content button {
   padding: 5px 10px;
   font-size: 12px;
   line-height: 1.5;
@@ -5117,11 +5124,13 @@ a.thumbnail.active {
   padding-left: 0;
   list-style: none;
 }
-.list-group {
+.list-group,
+#pricing .box-content .item ul {
   margin-bottom: 20px;
   padding-left: 0;
 }
-.list-group-item {
+.list-group-item,
+#pricing .box-content .item li {
   position: relative;
   display: block;
   padding: 10px 15px;
@@ -6336,7 +6345,8 @@ button.close {
   margin-left: auto;
   margin-right: auto;
 }
-.pull-right {
+.pull-right,
+#contact .box-content button {
   float: right !important;
 }
 .pull-left {
@@ -6770,6 +6780,47 @@ img {
     width: 25%;
   }
 }
+#team .box-content .item figure img {
+  border-radius: 50%;
+}
 #team .box-content .item h4 {
   margin-bottom: 0;
+}
+#pricing .box-content .item {
+  float: left;
+  width: 100%;
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  border-radius: 10px;
+  background-color: #eeeeee;
+}
+@media (min-width: 768px) {
+  #pricing .box-content .item {
+    float: left;
+    width: 25%;
+  }
+}
+@media (min-width: 768px) {
+  #pricing .box-content .item {
+    margin-left: 4.16666667%;
+  }
+}
+@media (min-width: 768px) {
+  #pricing .box-content .item {
+    left: 4.16666667%;
+  }
+}
+#contact .box-content form {
+  position: relative;
+  float: left;
+  width: 100%;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
